--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,3 +1,3 @@
 [passwords]
-smillerPM9876 = "precisionMD2024!"
-agarciaPM9876 = "precisionMD2025!"
+smillerPM = "precisionMD2024!"
+agarciaPM = "precisionMD2025!"
