--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,3 +1,3 @@
 [passwords]
-smillerPM = "precisionMD2024!"
-agarciaPM = "precisionMD2025!"
+smillerPMD = "precisionMD2024!"
+agarciaPMD = "precisionMD2025!"
